# Bates-Labeler

./: .gitignore  CHANGELOG.md  Dockerfile  PACKAGING.md  README.md  WEB_UI_GUIDE.md  app.py  bates-numbering-script.py  bates-readme.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
bates_labeler/: __init__.py  __version__.py  ai_analysis.py  audit_log.py  bates_validation.py  cli.py  cloud_storage.py  config_manager.py  core.py  export.py  form_handler.py  i18n.py  ocr.py  pdf_compare.py  pdf_validator_advanced.py  redaction.py  rotation.py  scheduler.py  streamlit_ui_extensions.py  template_manager.py  validation.py
docs/: .env.example  AI_ANALYSIS.md  AI_FEATURES.md  AI_INTEGRATION_SUMMARY.md  AI_QUICK_START.md  AI_SETUP_GUIDE.md  ARCHITECTURE.md  BACKEND_IMPLEMENTATION.md  CHANGELOG.md  FEATURES_V2_2.md  FEATURES_V2_3.md  HIVE_MIND_SUMMARY.md  IMPLEMENTATION_NOTES_REMAINING_FEATURES.md  OPTIMIZATION_REPORT.md  PERFORMANCE_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  QA_REPORT.md  USAGE_EXAMPLES_NEW_FEATURES.md  VERIFICATION_CHECKLIST.md  example_config.json
tests/: README.md  TESTING_REPORT.md  TEST_SUITE_V2_2_SUMMARY.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_ai_analysis.py  test_bates_numberer.py  test_cli.py  test_cloud_storage.py  test_config_manager.py  test_core_advanced.py  test_edge_cases.py  test_form_handler.py  test_pdf_processing.py  test_performance.py  test_performance_optimization.py  test_scheduler.py  test_structure.txt  test_template_manager.py  test_v2_2_batch_scheduler.py  test_v2_2_cloud_storage.py  test_v2_2_config_manager.py  test_v2_2_form_handler.py  test_v2_2_template_manager.py
