[tool.poetry]
name = "bates-labeler"
version = "1.1.0"
description = "Professional Bates numbering tool for legal document management. Add sequential Bates labels to PDF documents for litigation, discovery, and document production."
authors = ["Adam Blackington <adam@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thepingdoctor/Bates-Labeler"
repository = "https://github.com/thepingdoctor/Bates-Labeler"
documentation = "https://github.com/thepingdoctor/Bates-Labeler"
keywords = [
    "bates",
    "bates-numbering",
    "bates-stamping",
    "legal",
    "lawyers",
    "paralegal",
    "litigation",
    "discovery",
    "legal-documents",
    "document-management",
    "pdf",
    "pdf-processing",
    "evidence",
    "document-production",
    "law-firm",
    "legal-tech",
    "court-filing",
    "ediscovery",
    "legal-tools"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Legal Industry",
    "Topic :: Office/Business",
    "Topic :: Printing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English"
]
packages = [{include = "bates_labeler"}]

[tool.poetry.dependencies]
python = "^3.9,!=3.9.7"
PyPDF2 = "^3.0.1"
reportlab = "^4.0.7"
tqdm = "^4.66.1"
streamlit = "^1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
bates = "bates_labeler.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=bates_labeler --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
